[package]
name = "solana_data_structs"
description = "Data structures optimized for usage in on-chain Solana programs."
license-file = "LICENSE"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
rkyv = "0.7.2"
